# market_gateway

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/systemd/: market_gateway.service.example
docs/: market_gateway_spec.md  phase4_part2_schwab_stream.md
market_gateway/: __init__.py
market_gateway/app/: auth.py  config.py  deps.py  main.py
market_gateway/app/api/: events.py  health.py  history.py  options.py  orders.py  positions.py  quotes.py  status.py  strategies.py
market_gateway/app/core/: cache_keys.py  event_bus.py  models.py  stream_symbols.py  time_utils.py
market_gateway/app/services/: data_resolver.py  historical_store.py  live_cache.py  quote_stream_publisher.py  quote_stream_stub.py
market_gateway/schwab/: __init__.py  client.py  errors.py  factory.py  normalize.py  option_symbol.py  schwab_py_client.py  stream_equity_normalize.py  stream_equity_runner.py
scripts/: gateway.sh
tests/: conftest.py  test_auth.py  test_cache_keys.py  test_config_dsn.py  test_daily_sample_bars.py  test_data_resolver.py  test_events.py  test_health.py  test_history.py  test_live_cache.py  test_option_symbol.py  test_options.py  test_orders_safety.py  test_quote_stream_publisher.py  test_quotes.py  test_schwab_factory.py  test_schwab_normalize.py  test_stream_equity_normalize.py  test_stream_symbols.py
